Bug 102355 - Can't disable entries in ResourceMenuController via XDispatchProviderInterception
Summary: Can't disable entries in ResourceMenuController via XDispatchProviderIntercep...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: framework (show other bugs)
Version:
(earliest affected)
5.3.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Maxim Monastirsky
URL:
Whiteboard: target:5.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2016-09-22 09:08 UTC by Maxim Monastirsky
Modified: 2016-09-22 10:02 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
test doc (11.79 KB, application/vnd.oasis.opendocument.text)
2016-09-22 09:08 UTC, Maxim Monastirsky
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Maxim Monastirsky 2016-09-22 09:08:25 UTC
Created attachment 127540 [details]
test doc

1. Open the attached document (it's a modified version of the doc from Bug 98001).

2. Look at Insert > Field menu and in the Insert Field toolbar dropdown (found on the Standard toolbar). They both show the same list of commands, starting with "Page Number".

3. Click on "Intercept menu entries".

Expected results:

The "Page Number" entry should be disabled in Insert > Field, and disappear from the toolbar dropdown.
Comment 1 Commit Notification 2016-09-22 10:02:43 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=769f640558dbaf787059bd8131f174a9b1e6d7d0

tdf#102355 Fix disabling entries via dispatch interception

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.