tdf#102355 Fix disabling entries via dispatch interception

... in ResourceMenuController based top-level menus.
MenuBarManager doesn't set frame action listener for
top-level. This wasn't an issue when top-level always
was the menubar, but now top-level can be a popup menu.

Change-Id: Ibc9116389239eb06f84a2e53b31eacc0a09d438e